unpackaged/main/default/objects/Request__c/Request__c.object-meta.xml
<CustomObject>
    <label>Request</label>
    <nameField>
        <displayFormat>{000000}/{MM}{YY}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>