unpackaged/main/default/objects/Request__c/fields/AdminComments__c.field-meta.xml
<CustomField>
    <fullName>AdminComments__c</fullName>
    <label>Admin Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>