unpackaged/main/default/objects/Request__c/fields/AssignedToEmail__c.field-meta.xml
<CustomField>
    <fullName>AssignedToEmail__c</fullName>
    <formula>AssignedTo__r.Email</formula>
    <label>Assigned To Email</label>
    <type>Text</type>
</CustomField>