unpackaged/main/default/objects/Request__c/fields/AssignedToMe__c.field-meta.xml
<CustomField>
    <fullName>AssignedToMe__c</fullName>
    <formula>IF($User.Id =  AssignedTo__r.Id, "TRUE", "FALSE")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to Me</label>
    <type>Text</type>
</CustomField>