unpackaged/main/default/objects/Request__c/fields/CalendarWeek__c.field-meta.xml
<CustomField>
    <fullName>CalendarWeek__c</fullName>
    <formula>MOD(FLOOR( (DATEVALUE(RequestedDateTime__c)-DATEVALUE("2006-01-01" ))/7),52)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>