unpackaged/main/default/objects/Request__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <label>Case Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>