unpackaged/main/default/objects/Request__c/fields/CompletedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CompletedDateTime__c</fullName>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>