unpackaged/main/default/objects/Request__c/fields/CompletedWeek__c.field-meta.xml
<CustomField>
    <fullName>CompletedWeek__c</fullName>
    <formula>MOD(FLOOR((DATEVALUE(CompletedDateTime__c)-DATEVALUE("2006-01-01" ))/7),52)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>