unpackaged/main/default/objects/Request__c/fields/CompletionVsDueDate__c.field-meta.xml
<CustomField>
    <fullName>CompletionVsDueDate__c</fullName>
    <formula>DueDate__c - DATEVALUE(CompletedDateTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A positive number means the request was completed early, negative means it was completed late</inlineHelpText>
    <label>Completion vs Due Date (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>