unpackaged/main/default/objects/Request__c/fields/Date_Case_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_Closed__c</fullName>
    <label>Date Case Closed</label>
    <type>Date</type>
</CustomField>