unpackaged/main/default/objects/Request__c/fields/Date_Case_Raised__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_Raised__c</fullName>
    <label>Date Case Raised</label>
    <type>Date</type>
</CustomField>