unpackaged/main/default/objects/Request__c/fields/Date_Ticket_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Ticket_Closed__c</fullName>
    <label>Date Ticket Closed</label>
    <type>Date</type>
</CustomField>