unpackaged/main/default/objects/Request__c/fields/Date_Ticket_Raised__c.field-meta.xml
<CustomField>
    <fullName>Date_Ticket_Raised__c</fullName>
    <label>Date Ticket Raised</label>
    <type>Date</type>
</CustomField>