unpackaged/main/default/objects/Request__c/fields/DaysPastDueAuto__c.field-meta.xml
<CustomField>
    <fullName>DaysPastDueAuto__c</fullName>
    <formula>IF((TODAY() -  DueDate__c) &lt; 0, null, IF(ISNULL(CompletedDateTime__c), TODAY() -  DueDate__c , null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>