unpackaged/main/default/objects/Request__c/fields/DaysUntilDueAuto__c.field-meta.xml
<CustomField>
    <fullName>DaysUntilDueAuto__c</fullName>
    <formula>IF((DueDate__c  - TODAY()) &lt; 0 , null, IF(ISNULL(CompletedDateTime__c), DueDate__c  - TODAY(),null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>