unpackaged/main/default/objects/Request__c/fields/DepartmentPick__c.field-meta.xml
<CustomField>
    <fullName>DepartmentPick__c</fullName>
    <description>Which team would you like to request for their services?</description>
    <inlineHelpText>Which team would you like to request for their services?</inlineHelpText>
    <label>Department</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Tech/Salesforce</fullName>
            </value>
            <value>
                <fullName>Digital Construction</fullName>
                <label>Digital Construction - Quote</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>