unpackaged/main/default/objects/Request__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is working on the request in the technical team?</inlineHelpText>
    <label>Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>