unpackaged/main/default/objects/Request__c/fields/Developer_Effort__c.field-meta.xml
<CustomField>
    <fullName>Developer_Effort__c</fullName>
    <inlineHelpText>Low = &lt; 1/2 a day.
Medium = between 1/2 a day and 2 days. 
High =  &gt; 2 days</inlineHelpText>
    <label>Developer Effort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>