unpackaged/main/default/objects/Request__c/fields/IsCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsCompleted__c</fullName>
    <formula>ISPICKVAL( Status__c , "Completed" )</formula>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>