unpackaged/main/default/objects/Request__c/fields/IsRequestLate__c.field-meta.xml
<CustomField>
    <fullName>IsRequestLate__c</fullName>
    <formula>ISBLANK(CompletedDateTime__c) &amp;&amp; TODAY() &gt; DueDate__c || !ISBLANK(CompletedDateTime__c) &amp;&amp; DATEVALUE(CompletedDateTime__c) &gt; DueDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Request Late?</label>
    <type>Checkbox</type>
</CustomField>