unpackaged/main/default/objects/Request__c/fields/IsRequestLateIcon__c.field-meta.xml
<CustomField>
    <fullName>IsRequestLateIcon__c</fullName>
    <formula>IF(ISBLANK(CompletedDateTime__c) &amp;&amp; TODAY() &gt; DueDate__c, IMAGE("/servlet/servlet.FileDownload?file=0154K000000ZyN8", "Late"),
IF(!ISBLANK(CompletedDateTime__c) &amp;&amp; DATEVALUE(CompletedDateTime__c) &gt; DueDate__c,IMAGE("/servlet/servlet.FileDownload?file=0154K000000ZyN8", "Late"),IMAGE("/servlet/servlet.FileDownload?file=0154K000000ZyMy", "On Time"))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Lateness Status</label>
    <type>Text</type>
</CustomField>