unpackaged/main/default/objects/Request__c/fields/makepositive_Case_Raised__c.field-meta.xml
<CustomField>
    <fullName>makepositive_Case_Raised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>makepositive Case Raised</label>
    <type>Checkbox</type>
</CustomField>