unpackaged/main/default/objects/Request__c/fields/NextBusinessDay__c.field-meta.xml
<CustomField>
    <fullName>NextBusinessDay__c</fullName>
    <formula>CASE(
MOD( TODAY() - DATE(1900, 1, 7), 7),
0, TODAY()+1,
1, TODAY()+1,
2, TODAY()+1,
3, TODAY()+1,
4, TODAY()+1,
5, TODAY()+3,
6, TODAY()+2,
TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Business Day</label>
    <type>Date</type>
</CustomField>