unpackaged/main/default/objects/Request__c/fields/OpportunityRef__c.field-meta.xml
<CustomField>
    <fullName>OpportunityRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Lookup (Created for Digital Construction)</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>