unpackaged/main/default/objects/Request__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Critical</fullName>
            </value>
            <value>
                <fullName>2 - Urgent</fullName>
            </value>
            <value>
                <fullName>3 - High</fullName>
            </value>
            <value>
                <fullName>4 - Normal</fullName>
                <default>true</default>
                <label>4 - Normal</label>
            </value>
            <value>
                <fullName>5 - Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>