unpackaged/main/default/objects/Request__c/fields/Reason_Target_Not_Met__c.field-meta.xml
<CustomField>
    <fullName>Reason_Target_Not_Met__c</fullName>
    <label>Reason Target Not Met</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absence</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Awaiting Feedback</fullName>
            </value>
            <value>
                <fullName>Salesforce Case Raised</fullName>
            </value>
            <value>
                <fullName>Project Work</fullName>
            </value>
            <value>
                <fullName>New SF Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>