unpackaged/main/default/objects/Request__c/fields/RequestAgeDays__c.field-meta.xml
<CustomField>
    <fullName>RequestAgeDays__c</fullName>
    <formula>IF(ISBLANK(CompletedDateTime__c),
	/*** AGE FROM CREATED DATE TO NOW ***/
	(5*FLOOR((TODAY()-DATE(1996,01,01))/7) +
	MIN(5, 
	    MOD(TODAY()-DATE(1996,01,01), 7)
	))
	-
	(5*FLOOR((DATEVALUE(CreatedDate)-DATE(1996,01,01))/7) +
	MIN(5, 
	    MOD(DATEVALUE(CreatedDate)-DATE(1996,01,01), 7)
	)),

	/*** AGE FROM CREATED DATE TO COMPLETED DATE ***/
	(5*FLOOR((DATEVALUE(CompletedDateTime__c)-DATE(1996,01,01))/7) +
	MIN(5, 
	    MOD(DATEVALUE(CompletedDateTime__c)-DATE(1996,01,01), 7)
	))
	-
	(5*FLOOR((DATEVALUE(CreatedDate)-DATE(1996,01,01))/7) +
	MIN(5, 
	    MOD(DATEVALUE(CreatedDate)-DATE(1996,01,01), 7)
	))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>