unpackaged/main/default/objects/Request__c/fields/RequestedDateTime__c.field-meta.xml
<CustomField>
    <fullName>RequestedDateTime__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Date</label>
    <type>DateTime</type>
</CustomField>