unpackaged/main/default/objects/Request__c/fields/RequestedDoW__c.field-meta.xml
<CustomField>
    <fullName>RequestedDoW__c</fullName>
    <formula>CASE(MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 6), 7), 0, "6-Saturday", 1, "7-Sunday", 2,"1-Monday", 3, "2-Tuesday", 4, "3-Wednesday", 5, "4-Thursday", 6,"5-Friday","")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Day</label>
    <type>Text</type>
</CustomField>