unpackaged/main/default/objects/Request__c/fields/RequiredByDate__c.field-meta.xml
<CustomField>
    <fullName>RequiredByDate__c</fullName>
    <description>Date Request is required by (Created for Digital Construction)</description>
    <label>Required By Date</label>
    <type>Date</type>
</CustomField>