unpackaged/main/default/objects/Request__c/fields/Salesforce_Case_Raised__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Case_Raised__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify if the query has been raised as a Case with Salesforce Support</description>
    <label>Salesforce Case Raised</label>
    <type>Checkbox</type>
</CustomField>