unpackaged/main/default/objects/Request__c/fields/SourceEmail__c.field-meta.xml
<CustomField>
    <fullName>SourceEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source Email</label>
    <type>Checkbox</type>
</CustomField>