unpackaged/main/default/objects/Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <color>#3366FF</color>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#CC0000</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Awaiting Response</fullName>
                <color>#FF9900</color>
                <label>Awaiting Response</label>
            </value>
            <value>
                <fullName>User Testing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#33CC00</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <color>#BBBBBB</color>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <color>#333333</color>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Aborted</fullName>
                <color>#666666</color>
                <label>Aborted</label>
            </value>
            <value>
                <fullName>Roadmap</fullName>
                <color>#CC33CC</color>
                <label>Roadmap</label>
            </value>
            <value>
                <fullName>Project Created</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <color>#419249</color>
                <label>Duplicate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>