unpackaged/main/default/objects/Request__c/fields/StatusIcon__c.field-meta.xml
<CustomField>
    <fullName>StatusIcon__c</fullName>
    <formula>CASE( Status__c,
  "New",  IMAGE("/servlet/servlet.FileDownload?file=0154K0000009yoe", "New"),
  "Assigned",  IMAGE("/servlet/servlet.FileDownload?file=0154K0000009yob", "Assigned"),
  "In Progress",  IMAGE("/servlet/servlet.FileDownload?file=0154K0000009yod", "In Progress"),
  "On Hold",  IMAGE("/servlet/servlet.FileDownload?file=0154K0000009yof", "On Hold"),
  "Awaiting Response",  IMAGE("/servlet/servlet.FileDownload?file=0154K0000009yog", "Awaiting Response"),
  "Updated",  IMAGE("/servlet/servlet.FileDownload?file=0154K0000009yog", "Updated"),
  "Completed",  IMAGE("/servlet/servlet.FileDownload?file=0154K0000009yoc", "Completed"),
  "Rejected",  IMAGE("/servlet/servlet.FileDownload?file=0154K0000009yoa", "Rejected"),
  "Aborted",  IMAGE("/servlet/servlet.FileDownload?file=0154K0000009yoa", "Aborted"),
  "Roadmap",  IMAGE("/servlet/servlet.FileDownload?file=0154K0000009yof", "Roadmap"),
  "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icon</label>
    <type>Text</type>
</CustomField>