unpackaged/main/default/objects/Request__c/fields/TargetResolutionTimeDays__c.field-meta.xml
<CustomField>
    <fullName>TargetResolutionTimeDays__c</fullName>
    <formula>CASE(TEXT(Priority__c),
  "1 - Critical", 1, 
  "2 - Urgent", 1,
  "3 - High", 2,
  "4 - Normal", 5,
  "5 - Low", 10,
10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Resolution Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>