unpackaged/main/default/objects/Request__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <label>Ticket Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>