unpackaged/main/default/objects/Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DepartmentPick__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Training Request</fullName>
            </value>
            <value>
                <fullName>Product/Price Book Request</fullName>
            </value>
            <value>
                <fullName>Report/Dashboard Request</fullName>
            </value>
            <value>
                <fullName>New User Request</fullName>
            </value>
            <value>
                <fullName>Bug/Error Report</fullName>
            </value>
            <value>
                <fullName>Access/Permission Change</fullName>
            </value>
            <value>
                <fullName>Record Ownership Change</fullName>
            </value>
            <value>
                <fullName>Data Import/Export</fullName>
            </value>
            <value>
                <fullName>Data Delete/Merge</fullName>
            </value>
            <value>
                <fullName>Query/Information Request</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Invoice Untick - Buy Price Change</fullName>
            </value>
            <value>
                <fullName>Invoice Untick - Change Details PO number/ address/ no monetary change</fullName>
            </value>
            <value>
                <fullName>User Deactivation</fullName>
            </value>
            <value>
                <fullName>Reset Password</fullName>
            </value>
            <value>
                <fullName>Resource Booking Error Issue</fullName>
            </value>
            <value>
                <fullName>Revenue Recognised Issue</fullName>
            </value>
            <value>
                <fullName>Shared Ownership Deal booking Issue</fullName>
            </value>
            <value>
                <fullName>Lightning Rollout</fullName>
            </value>
            <value>
                <fullName>App Build</fullName>
            </value>
            <value>
                <fullName>Optimiser Report</fullName>
            </value>
            <value>
                <fullName>Health Check Report</fullName>
            </value>
            <value>
                <fullName>Lightning Adoption</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Website Update</fullName>
            </value>
            <value>
                <fullName>Brochure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>