unpackaged/main/default/objects/Request__c/fields/WebsiteUpdatePick__c.field-meta.xml
<CustomField>
    <fullName>WebsiteUpdatePick__c</fullName>
    <description>Type of website update required.</description>
    <inlineHelpText>Type of website update required.</inlineHelpText>
    <label>Website Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blog Post</fullName>
            </value>
            <value>
                <fullName>Webpage Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>