unpackaged/main/default/objects/Request__c/fields/WebsiteURL__c.field-meta.xml
<CustomField>
    <fullName>WebsiteURL__c</fullName>
    <description>URL for website where update is required.</description>
    <inlineHelpText>URL for website where update is required.</inlineHelpText>
    <label>Website URL</label>
    <type>Url</type>
</CustomField>