unpackaged/main/default/objects/Request__c/fields/Week_Joined__c.field-meta.xml
<CustomField>
    <fullName>Week_Joined__c</fullName>
    <formula>IF( IsCompleted__c , CompletedWeek__c , CalendarWeek__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week (Joined)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>