unpackaged/main/default/objects/Request__c/validationRules/DeveloperEffortMustBePopulated.validationRule-meta.xml
<ValidationRule>
    <fullName>DeveloperEffortMustBePopulated</fullName>
    <active>true</active>
    <description>Rule to trigger if request is completed without the developer effort field being populated</description>
    <errorConditionFormula>AND(  ISPICKVAL( Developer_Effort__c , "")  , ISPICKVAL(Status__c , "Completed"),  $User.ProfileId = "00e4K000001dwXd")</errorConditionFormula>
    <errorDisplayField>Developer_Effort__c</errorDisplayField>
    <errorMessage>Developer Effort must be populated</errorMessage>
</ValidationRule>