unpackaged/main/default/objects/Request__c/validationRules/Due_Date_cannot_be_before_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_cannot_be_before_Today</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISNEW(),
  DueDate__c &lt;= TODAY()
)</errorConditionFormula>
    <errorMessage>The Due Date must be a date after today's date.</errorMessage>
</ValidationRule>