unpackaged/main/default/objects/Request__c/validationRules/Due_Date_equals_Critical_Urgent_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_equals_Critical_Urgent_Request</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISCHANGED(DueDate__c),
  DueDate__c &lt;= NextBusinessDay__c,
  NOT(
    OR(
      ISPICKVAL(Priority__c,"1 - Critical"),
      ISPICKVAL(Priority__c,"2 - Urgent")
    )
  ),
  NOT(IsCompleted__c)
)</errorConditionFormula>
    <errorDisplayField>DueDate__c</errorDisplayField>
    <errorMessage>Due Date cannot be the next business day unless the Priority is Critical or Urgent.</errorMessage>
</ValidationRule>