unpackaged/main/default/objects/Request__c/validationRules/Must_Define_a_Request_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Define_a_Request_Type</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Status__c , "Completed") || ISPICKVAL(Status__c , "Aborted") &amp;&amp; ISBLANK(TEXT(Type__c))</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>The type must be defined before closing a request.</errorMessage>
</ValidationRule>