unpackaged/main/default/objects/Request__c/validationRules/Only_Owner_Or_Admin_Can_Change_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Owner_Or_Admin_Can_Change_Due_Date</fullName>
    <active>false</active>
    <description>Request Due Date can only be changed by the Request Owner or Admin</description>
    <errorConditionFormula>$User.Id !=  OwnerId &amp;&amp;
$Profile.Name != "System Administrator" &amp;&amp;
ISCHANGED( DueDate__c )</errorConditionFormula>
    <errorDisplayField>DueDate__c</errorDisplayField>
    <errorMessage>Only the Request Owner or an Admin can change the Due Date on this Request</errorMessage>
</ValidationRule>