unpackaged/main/default/objects/Request__c/listViews/All_New_Requests.listView-meta.xml
<ListView>
    <fullName>All_New_Requests</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DueDate__c</columns>
    <columns>AssignedTo__c</columns>
    <columns>Status__c</columns>
    <columns>StatusIcon__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>RequestedDateTime__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2017 12:00 AM</value>
    </filters>
    <label>All New Requests</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>