unpackaged/main/default/objects/Request__c/listViews/All_Open_Requests.listView-meta.xml
<ListView>
    <fullName>All_Open_Requests</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>AssignedTo__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>DueDate__c</columns>
    <columns>makepositive_Case_Raised__c</columns>
    <columns>Salesforce_Case_Raised__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Updated,Completed,Rejected,Aborted,Roadmap,Duplicate</value>
    </filters>
    <filters>
        <field>RequestedDateTime__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2017 12:00 AM</value>
    </filters>
    <label>All Open Requests</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>