unpackaged/main/default/objects/Request__c/listViews/All_Requests.listView-meta.xml
<ListView>
    <fullName>All_Requests</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DueDate__c</columns>
    <columns>AssignedTo__c</columns>
    <columns>Status__c</columns>
    <columns>StatusIcon__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Requests</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>Dassault_Division_Team</group>
    </sharedTo>
</ListView>