unpackaged/main/default/objects/Request__c/listViews/Construction_Requests2.listView-meta.xml
<ListView>
    <fullName>Construction_Requests2</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DueDate__c</columns>
    <columns>AssignedTo__c</columns>
    <columns>Status__c</columns>
    <columns>StatusIcon__c</columns>
    <columns>RequestAgeDays__c</columns>
    <columns>CompletedDateTime__c</columns>
    <columns>IsRequestLateIcon__c</columns>
    <columns>CompletionVsDueDate__c</columns>
    <columns>DaysPastDueAuto__c</columns>
    <columns>DaysUntilDueAuto__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DepartmentPick__c</field>
        <operation>equals</operation>
        <value>Digital Construction</value>
    </filters>
    <label>Construction Requests</label>
</ListView>