unpackaged/main/default/objects/Request__c/listViews/Danielle_s_Requests.listView-meta.xml
<ListView>
    <fullName>Danielle_s_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Type__c</columns>
    <columns>Division__c</columns>
    <columns>Subject__c</columns>
    <columns>Developer__c</columns>
    <columns>Developer_Effort__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AssignedTo__c</field>
        <operation>equals</operation>
        <value>Danielle Clough,Darren Henry,Shaun Hughes</value>
    </filters>
    <filters>
        <field>Developer__c</field>
        <operation>equals</operation>
        <value>,Danielle Clough,Darren Henry,Shaun Hughes</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress,Awaiting Response,User Testing,On Hold</value>
    </filters>
    <label>All Tech Requests</label>
</ListView>