unpackaged/main/default/objects/Request__c/listViews/My_Assigned_Closed_Requests.listView-meta.xml
<ListView>
    <fullName>My_Assigned_Closed_Requests</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DueDate__c</columns>
    <columns>CompletedDateTime__c</columns>
    <columns>Status__c</columns>
    <columns>StatusIcon__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed,Aborted</value>
    </filters>
    <filters>
        <field>AssignedToMe__c</field>
        <operation>equals</operation>
        <value>TRUE</value>
    </filters>
    <filters>
        <field>RequestedDateTime__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2018 12:00 AM</value>
    </filters>
    <label>My Assigned Closed Requests</label>
    <sharedTo>
        <group>SystemAdministrators</group>
    </sharedTo>
</ListView>